Almost pixel-in-pixel

--- a/css/style.css
+++ b/css/style.css
@@ -167,33 +167,41 @@ html, body {
 body {
   font-size: 16px;
   line-height: 21px;
-  font-family: "Cuprum", "Verdana", sans-serif;
+  font-family: "Cuprum", Verdana, sans-serif;
   color: #000000;
   background-color: #ffffff;
 }
 
 h2 {
   font-size: 30px;
-  font-family: "Cuprum", "Verdana", sans-serif;
+  font-family: "Cuprum", Verdana, sans-serif;
   line-height: 38px;
   color: #32425c;
 }
 
 h3 {
   font-size: 30px;
-  font-family: "Cuprum", "Verdana", sans-serif;
+  font-family: "Cuprum", Verdana, sans-serif;
   line-height: 30px;
-  color: 000;
+  color: #000;
 }
 
 a {
   text-decoration: none;
-  font-family: "Cuprum", "Verdana", sans-serif;
+  font-family: "Cuprum", Verdana, sans-serif;
   color: #ffffff;
 }
 
+p {
+  font-size: 13px;
+  font-family: "Pt Sans", Verdana, sans-serif;
+  line-height: 17px;
+  color: #000;
+
+}
+
 .hidden {
-  display: hidden;
+  display: none;
 }
 
 .hollow {
@@ -234,7 +242,7 @@ a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Cuprum", "Verdana", sans-serif;
+  font-family: "Cuprum", Verdana, sans-serif;
   background-color: #ee3643;
   border: 4px solid #ee3643;
   border-radius: 3px;
@@ -415,8 +423,10 @@ a {
   padding: 2px 50px 0 50px;
   font-size: 16px;
   font-style: italic;
+  font-family: "Cuprum", Verdana, sans-serif;
   line-height: 23px;
   color: #ee3643;
+
 }
 
 .header-contacts {
@@ -678,7 +688,7 @@ a {
   width: 218px;
   margin: 0 0 21px 20px;
   border: 1px solid #e5e5e5;
-  font-family: "PT Sans" , "Verdana", sans-serif;
+  font-family: "PT Sans" , Verdana, sans-serif;
   vertical-align: top;
   background-color: #fff;
 }
@@ -778,6 +788,7 @@ a {
 /*-----------Services-----------*/
 
 .services {
+  margin-bottom: 80px;
   padding: 64px 0 102px 0;
   background-color: #f2f6f8;
 }
@@ -789,19 +800,311 @@ a {
 }
 
 .services p {
+  font-family: "PT Sans", Verdana, sans-serif;
+}
+
+.services-description {
   margin: 0;
-  padding: 0;
+  padding: 0 0 68px 0;
   font-size: 13px;
   line-height: 24px;
-  font-family: "PT Sans" , "Verdana", sans-serif;
+  font-family: "PT Sans" , Verdana, sans-serif;
 }
 
 .services-section {
-
+  position: relative;
 }
 
 .services-menu {
+  position: relative;
+  float: left;
+  margin: 0 80px 0 0;
+  padding: 0;
+  width: 240px;
+  list-style-type: none;
+}
+
+.services-menu::after {
+  content: "";
+  position: absolute;
+  z-index: 10;
+  top: -45px;
+  right: 0;
+  width: 10px;
+  height: 272px;
+  background: url("../img/vertical_shadow.png") no-repeat;
+}
+
+.services-menu-item {
+  padding: 19px 20px 19px 22px;
+  font-size: 21px;
+  line-height: 21px;
+  color: #fff;
+  background-color: #32425c;
+  border-top: 1px solid #405069;
+  border-bottom: 1px solid #293449;
+}
+
+.service-info {
+  float: left;
+  width: 400px;
+}
+
+.service-info-title {
+  padding: 0;
+  margin: 0 0 24px 0;
+  font-size: 34px;
+  text-transform: uppercase;
+}
+
+.service-info-description {
+  margin-bottom: 25px;
+  font-size: 13px;
+  line-height: 24px;
+}
+
+.service-image {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.service-info-btn {
+  float: left;
+  width: 175px;
+}
+
+/*--Info--*/
+
+.info {
+  padding: 0 0 86px 0;
+}
+
+.info-section-left {
+  float: left;
+  width: 540px;
+}
+
+.info-section-title {
+  margin: 0 0 25px 0;
+  padding: 0;
+  text-transform: uppercase;
+}
+
+.info-section-description {
+  margin: 0 0 26px 0;
+  padding: 0;
+  font-size: 13px;
+  line-height: 24px;
+  font-family: "PT Sans", Verdana, sans-serif;
+}
+
+.info-section-left p:last-of-type  {
+  margin-bottom: 20px;
+}
+
+.info-section-list {
   margin: 0;
   padding: 0;
+  float: left;
   list-style-type: none;
+}
+
+.info-section-list li {
+  position: relative;
+  margin: 0 0 20px 0;
+  padding: 0 0 0 36px;
+  font-size: 18px;
+  line-height: 20px;
+}
+
+.info-section-list li::before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 8px;
+  width: 25px;
+  height: 2px;
+  background-color: #fb565a;
+}
+
+.info-section-list li:last-child {
+  margin-bottom: 35px;
+}
+
+.info-section-left-btn {
+  clear: both;
+  float: left;
+  width: 200px;
+}
+
+.info-section-right {
+  float: right;
+  width: 300px;
+}
+
+.map-preview {
+  margin-bottom: 46px;
+  width: 300px;
+  height: 158px;
+}
+
+/*--Footer--*/
+
+.footer {
+  padding-bottom: 49px;
+  background-color: #32425c;
+}
+
+.footer-section-left {
+  float: left;
+  width: 380px;
+}
+
+.footer-logo {
+  margin-bottom: 32px;
+  padding: 17px 16px 16px 16px;
+  width: 188px;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 30px;
+}
+
+.footer-address {
+  clear: both;
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  font-family: "Cuprum", Verdana, sans-serif;
+  line-height: 24px;
+  color: #f1f5f7;
+}
+
+.footer-section-right {
+  float: right;
+  width: 550px;
+}
+
+.footer-menu {
+  margin: 36px 0 0 0;
+  padding: 0;
+  font-size: 0;
+  list-style-type: none;
+  text-align: right;
+}
+
+.footer-menu li {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 59px;
+}
+
+.footer-menu li:first-child {
+  margin-left: 0;
+}
+
+.footer-menu a {
+  display: block;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.footer-menu-2 a {
+  color: #ffd180;
+}
+/*--Bottom section--*/
+
+.bottom-section {
+  padding: 36px 0 30px 0;
+  background-color: #293449;
+}
+
+.bottom-copyright {
+  float: left;
+  width: 320px;
+  margin: 0 60px 0 0;
+  font-size: 16px;
+  font-family: "Cuprum", Verdana, sans-serif;
+  line-height: 18px;
+  color: #fff;
+}
+
+.bottom-socials {
+  float: left;
+  padding: 0 0 0 10px;
+  margin: 0 20px 0 0;
+  text-align: center;
+}
+
+.social-btn {
+  position: relative;
+  display: inline-block;
+  width: 41px;
+  height: 41px;
+  vertical-align: top;
+  font-size: 0;
+  line-height: 0;
+  background-color: #212a3a;
+  border-radius: 50%;
+
+}
+
+.social-btn::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background: url("../img/sprites.png") no-repeat;
+  transform: translate(-50%, -50%);
+
+}
+
+.social-btn-vk::before {
+  width: 20px;
+  height: 12px;
+  background-position: -10px -725px;
+}
+
+
+.social-btn-fb::before {
+  width: 10px;
+  height: 18px;
+  background-position: -10px -650px;
+}
+
+.social-btn-instagram::before {
+  width: 17px;
+  height: 17px;
+  background-position: -10px -688px;
+}
+
+.bottom-contacts {
+  float: right;
+  width: 300px;
+}
+
+.bottom-contacts-section {
+  float: left;
+  width: 150px;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 18px;
+  font-family: "Cuprum", Verdana, sans-serif;
+  color: #fff;
+}
+
+.bottom-contacts-section.call-back {
+  margin: 0 20px 0 0;
+}
+
+.bottom-contacts-section.design-by {
+  width: 110px;
+  padding: 0 0 0 20px;
+}
+
+.bottom-contacts a {
+  font-size: 16px;
+  line-height: 18px;
+  color: #ffd180;
 }
