--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-/*-Sprites-*/
-
+/*===========*/
+/*==Sprites==*/
+/*===========*/
 .sprites {
     background-image: url("../img/sprites.png");
     background-repeat: no-repeat;
@@ -157,7 +158,9 @@
     background-position: -10px -582px;
 }
 
-/*-Global-*/
+/*==========*/
+/*==Global==*/
+/*==========*/
 
 html, body {
   margin: 0;
@@ -245,10 +248,22 @@ p {
   font-family: "Cuprum", Verdana, sans-serif;
   background-color: #ee3643;
   border: 4px solid #ee3643;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
-/*-Top section-*/
+.btn:hover {
+  background-color: #ca2c37;
+  border-color: #ca2c37;
+}
+
+.btn:active {
+  background-color: #ba2732;
+  border-color: #ba2732;
+}
+
+/*=============*/
+/*=Top section=*/
+/*=============*/
 
 .top-section {
   background-color: #293449;
@@ -339,7 +354,9 @@ p {
   background-position: -10px -500px;
 }
 
-/*-Top-section-right-*/
+/*===================*/
+/*=Top-section-right=*/
+/*===================*/
 
 .top-section-right {
   float: right;
@@ -404,7 +421,9 @@ p {
   opacity: 0.6;
 }
 
-/*-Header-*/
+/*==========*/
+/*==Header==*/
+/*==========*/
 
 .header {
   margin-bottom: 57px;
@@ -486,6 +505,7 @@ p {
   background-color: #ffffff;
 }
 
+
 .login-btn {
   position: relative;
   padding-left: 49px;
@@ -505,7 +525,27 @@ p {
 .register-btn {
   margin-left: 10px;
 }
-/*--Main menu--*/
+
+.user-block-btn:hover {
+  color: #ee3643;
+}
+
+.user-block-btn:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.login-btn:hover::before {
+  background-position: -10px -290px;
+}
+
+.login-btn:active::before {
+  background-position: -10px -327px;
+}
+
+/*=============*/
+/*==Main menu==*/
+/*=============*/
+
 .navigation {
   margin: 0;
   padding: 0;
@@ -527,7 +567,18 @@ p {
   line-height: 17px;
   text-decoration: none;
   color: #ffffff;
+  background-color: #32425c;
   border-bottom: 5px solid #293449;
+}
+
+.navigation a:hover {
+  background-color: #293449;
+}
+
+.navigation a:active {
+  color: rgba(255, 255, 255, 0.5);
+  background-color: #1d2739;
+  border-color: #1d2739;
 }
 
 .navigation li:last-child a {
@@ -538,13 +589,16 @@ p {
   padding-left: 55px;
 }
 
-/*--Index content--*/
-
+/*=================*/
+/*==Index content==*/
+/*=================*/
 .index-content {}
 
 .offers-top-section {}
 
-/*--Offers--*/
+/*==========*/
+/*==Offers==*/
+/*==========*/
 
 .offer {
   position: relative;
@@ -639,7 +693,17 @@ p {
   border-radius: 3px;
 }
 
-/*--Slider--*/
+.offer-link:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.offer-link:active {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+/*==========*/
+/*==Slider==*/
+/*==========*/
 
 .slider {
   float: left;
@@ -647,7 +711,9 @@ p {
   height: 266px;
 }
 
-/*--Index-popular--*/
+/*=================*/
+/*==Index-popular==*/
+/*=================*/
 
 .index-popular-header {
   margin-bottom: 21px;
@@ -797,7 +863,7 @@ p {
   text-align: center;
   text-transform: uppercase;
   background-color: #ee3643;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 
 .catalog-item-price::after {
@@ -808,6 +874,48 @@ p {
   border: 19px solid #fff;
   border-left-color: #ee3643
 }
+
+.catalog-item:hover img{
+  visibility: hidden;
+}
+
+.catalog-item:hover  {
+  box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
+}
+
+.catalog-item:hover .catalog-actions{
+  display: block;
+}
+
+.item-action-buy:hover {
+  background-color: #5fbb2d;
+  border-color: #5fbb2d #5fbb2d #367315 #5fbb2d;
+}
+
+.item-action-buy:hover::before {
+  opacity: 1;
+}
+
+.item-action-buy:active {
+  background-color: #518534;
+  border-color: #518534;
+}
+
+.item-action-buy:active::before {
+  opacity: 1;
+}
+
+.item-action-bookmark:hover {
+  border-color: #32425c;
+}
+
+.item-action-bookmark:active {
+  opacity: 0.3;
+}
+
+/*========================*/
+/*==Index-popular brands==*/
+/*========================*/
 
 .index-popular-brands {
   margin: 0;
@@ -830,7 +938,21 @@ p {
   width: 100%;
 }
 
-/*-----------Services-----------*/
+.index-popular-brands li:hover {
+  box-shadow: 0 10px 25px rgba(41, 52, 73, 0.5);
+}
+
+.index-popular-brands li:active {
+  box-shadow: 0 4px 10px rgba(41, 52, 73, 0.5);
+}
+
+.index-popular-brands li:active img {
+  opacity: 0.3;
+}
+
+/*============*/
+/*==Services==*/
+/*============*/
 
 .services {
   margin-bottom: 80px;
@@ -883,12 +1005,24 @@ p {
 .services-menu-item {
   padding: 19px 20px 19px 22px;
   font-size: 21px;
+  font-weight: bold;
   line-height: 21px;
   color: #fff;
   background-color: #32425c;
   border-top: 1px solid #405069;
   border-bottom: 1px solid #293449;
 }
+
+.services-menu-item:hover {
+  background-color: #293449;
+}
+
+.services-menu-item.active {
+  color: #32425c;
+  background-color: #fff;
+  border-color: #fff;
+}
+
 
 .service-info {
   float: left;
@@ -919,7 +1053,9 @@ p {
   width: 175px;
 }
 
-/*--Info--*/
+/*========*/
+/*==Info==*/
+/*========*/
 
 .info {
   padding: 0 0 86px 0;
@@ -994,7 +1130,9 @@ p {
   height: 158px;
 }
 
-/*--Footer--*/
+/*==========*/
+/*==Footer==*/
+/*==========*/
 
 .footer {
   padding-bottom: 49px;
@@ -1057,8 +1195,18 @@ p {
 .footer-menu-2 a {
   color: #ffd180;
 }
-/*--Bottom section--*/
 
+.footer-menu a:hover {
+  text-decoration: underline;
+}
+
+.footer-menu a:active {
+  text-decoration: none;
+  opacity: 0.5;
+}
+/*===================*/
+/*==Bottom section===*/
+/*===================*/
 .bottom-section {
   padding: 36px 0 30px 0;
   background-color: #293449;
@@ -1123,6 +1271,11 @@ p {
   background-position: -10px -688px;
 }
 
+.social-btn:hover,
+.social-btn:active {
+  background-color: #ee3643;
+}
+
 .bottom-contacts {
   float: right;
   width: 300px;
@@ -1154,7 +1307,18 @@ p {
   color: #ffd180;
 }
 
-/*--Popup - write us form--*/
+.bottom-contacts a:hover {
+  text-decoration: underline;
+}
+
+.bottom-contacts a:active {
+  color: #ee3643;
+  text-decoration: none;
+}
+
+/*=========================*/
+/*==Popup - write us form==*/
+/*=========================*/
 
 .write-us-form {
   position: fixed;
@@ -1265,7 +1429,10 @@ p {
   margin: 0 auto;
   color: #fff;
 }
-/*-Popup map-*/
+
+/*=============*/
+/*==Popup map==*/
+/*=============*/
 
 .popup-map {
   position: fixed;
